--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,13 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "app.py",
-        "use": "@vercel/python"
-      }
-    ],
     "routes": [
       {
-        "src": "/upload",
-        "dest": "/app.py"
+        "src": "/api/(.*)",
+        "dest": "app.py"
       },
       {
-        "src": "/ask",
-        "dest": "/app.py"
-      },
-      {
-        "src": "/get-pdf/(.*)",
-        "dest": "/app.py"
-      },
-      {
-        "src": "/get-pdf-names",
-        "dest": "/app.py"
+        "src": "/(.*)",
+        "dest": "/pdf-upload/$1"
       }
     ]
   }
