--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,9 @@
 {
     "version": 2,
+    "builds": [
+        {"src": "app.py", "use": "@vercel/python"}
+    ],
     "routes": [
-      {
-        "src": "/api/(.*)",
-        "dest": "app.py"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/pdf-upload/$1"
-      }
+        {"src": "/(.*)", "dest": "app.py"}
     ]
-  }
-  
+}
